--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,13 @@
 			<artifactId>selenium-java</artifactId>
 			<version>3.141.59</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
 		<dependency>
-			<groupId>com.sikuliX</groupId>
-			<artifactId>sikulix-api</artifactId>
-			<version>2.0.4</version>
+			<groupId>com.sikulix</groupId>
+			<artifactId>sikulixapi</artifactId>
+			<version>2.0.5</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
